--- a/client/index.html
+++ b/client/index.html
@@ -29,6 +29,8 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="src/client.js"></script>
-    <script src="src/game.js"></script>
+    <script src="src/variables.js"></script>
+    <script src="src/classes.js"></script>
+    <script src="src/functions.js"></script>
 </body>
 </html>
