--- a/client/index.html
+++ b/client/index.html
@@ -32,5 +32,6 @@
     <script src="src/variables.js"></script>
     <script src="src/classes.js"></script>
     <script src="src/functions.js"></script>
+    <script src="src/event.js"></script>
 </body>
 </html>
