--- a/client/index.html
+++ b/client/index.html
@@ -14,6 +14,7 @@
         body {
             background: var(--bg);
             color: var(--br);
+            overflow: hidden;
         }
 
         canvas {
@@ -29,9 +30,9 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="src/variables.js"></script>
+    <script src="src/client.js"></script>
     <script src="src/classes.js"></script>
     <script src="src/functions.js"></script>
-    <script src="src/client.js"></script>
     <script src="src/event.js"></script>
 </body>
 </html>
