--- a/client/index.html
+++ b/client/index.html
@@ -11,6 +11,16 @@
         :root {
             --bg: #231f20;
             --br: #c2c2c2;
+
+            --width: 768px;
+
+            --height: 100%;
+
+            --rank: rgb(255, 195, 92);
+            --name: rgb(138, 255, 138);
+            --kills: rgb(255, 173, 125);
+            --deaths: rgb(100, 224, 255);
+            --damage: rgb(255, 112, 191);
         }
 
         body {
@@ -20,11 +30,14 @@
         }
 
         canvas {
+            display: none;
             border: 0px solid var(--br);
+            z-index: -1;
         }
 
         #game {
-            display: none;
+            left: calc(50vw - var(--width) / 2);
+            height: 100vh;
         }
 
         .wrapper {
@@ -55,13 +68,89 @@
         .bold {
             font-weight: 600;
         }
+
+        #score {
+            position: absolute;
+            left: calc(50vw - var(--width) / 2);
+            top: calc(50vh - var(--width) / 2);
+            width: var(--width);
+            height: var(--width);
+            pointer-events: none;
+            /* background: rgba(0, 150, 255, 0.3); */
+        }
+        #scoreboard {
+            display: none;
+            position: relative;
+            width: 20rem;
+            /* height: 10rem; */
+            margin-top: 1rem;
+            margin-left: 1rem;
+            padding: 0.25rem;
+            /* background: rgba(255, 0, 150, 0.3); */
+            background: #10101080;
+        }
+        .bar {
+            position: inherit;
+            /* border: #231f20 solid 1px; */
+        }
+        #bar {
+            height: var(--height);
+        }
+        li {
+            display: inline;
+            margin: 0.1rem;
+            color: aliceblue;
+            /* border: #231f20 solid 1px; */
+        }
+
+        .bar ul {
+            display: inline-block;
+        }
+
+        .bar {
+            width: 100%;
+        }
+        .column li {
+            display: block;
+            padding: 0;
+            margin: 0;
+        }
+
+        #rank {
+            color: var(--rank);
+        }
+        #name {
+            color: var(--name);
+        }
+        #kills {
+            color: var(--kills);
+        }
+        #deaths {
+            color: var(--deaths);
+        }
+        #damage {
+            color: var(--damage);
+        }
+
+        #toggle {
+            pointer-events: all;
+            margin-left: 1rem;
+        }
+        .toggle {
+            background: #8b5cf6;
+            top: 0.5rem;
+        }
+        .toggle:hover {
+            background: #9876ff;
+        }
+        
     </style>
 </head>
 <body>
     <account>
         <div class="login wrapper" class="row">
             <h1 class="title">Login</h1>
-            <w1 class="warning">only one user can be logged in to the same account at once</w1>
+            <w1 class="warning">only one user can be logged in to the same account at once</w1> <br>
             <p1 class="info"></p1>
 
             <form class="col s12" method="post">
@@ -112,8 +201,58 @@
         </div>
     </account>
 
-    <game class="flex content-center items-center absolute" style="left: calc(50vw - 768px / 2); height: 100vh;">
-        <canvas id="game"></canvas>
+    <scoreboard id="score">
+        <!-- <toggle id="toggle">
+            <a class="toggle waves-effect waves-light btn">score</a>
+        </toggle> -->
+        <div id="scoreboard">
+            <ul id="bar" class="bar">
+                <ul class="column">
+                    <li id="rank">Rank</li>
+                    <li>1</li>
+                    <li>2</li>
+                    <li>3</li>
+                    <li>4</li>
+                    <li>5</li>
+                </ul>
+                <ul class="column ml-1">
+                    <li id="name">Name</li>
+                    <li>moderator</li>
+                    <li>admin</li>
+                    <li>dev</li>
+                    <li>Nachos</li>
+                    <li>Egode</li>
+                </ul>
+                <ul class="column right ml-1">
+                    <li id="damage">Dmg</li>
+                    <li>32</li>
+                    <li>27</li>
+                    <li>19</li>
+                    <li>16</li>
+                    <li>14</li>
+                </ul>
+                <ul class="column right ml-1">
+                    <li id="deaths">Deaths</li>
+                    <li>1</li>
+                    <li>2</li>
+                    <li>3</li>
+                    <li>4</li>
+                    <li>5</li>
+                </ul>
+                <ul class="column right ml-1">
+                    <li id="kills">Kills</li>
+                    <li>8</li>
+                    <li>7</li>
+                    <li>3</li>
+                    <li>3</li>
+                    <li>1</li>
+                </ul>
+            </ul>
+        </div>
+    </scoreboard>
+
+    <game id="game" class="flex content-center items-center absolute">
+        <canvas></canvas>
     </game>
 
     <!-- Compiled and minified JavaScript -->
