--- a/client/index.html
+++ b/client/index.html
@@ -31,7 +31,8 @@
 
         canvas {
             display: none;
-            border: 0px solid var(--br);
+            border-top-right-radius: 4px;
+            border-top-left-radius: 4px;
             z-index: -1;
         }
 
